samples/_failures_safe/1761302664_b7bda8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4956a2d0.c: In function ‘main’:
./samples/SAFE/__tmp_4956a2d0.c:150:21: error: expected declaration or statement at end of input
  150 |                     printf("Matrix A + B:\n");
      |                     ^~~~~~
./samples/SAFE/__tmp_4956a2d0.c:150:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4956a2d0.c:150:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4956a2d0.c:150:21: error: expected declaration or statement at end of input
